--- a/public/index.html
+++ b/public/index.html
@@ -62,11 +62,11 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <!-- <div class="container">
     <div class="popup-note">
       <a href="/manager/login/manager.html"><p>Connect to Manager</p></a>
     </div>
-  </div>
+  </div> -->
   <div class="container">
     <div class="popup-note">
       <p>Login Telegram</p>
