--- a/public/index.html
+++ b/public/index.html
@@ -1,98 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Authentication</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      background-color: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      text-align: center;
-      margin: 10px;
-      width: 90%;
-      max-width: 300px;
-    }
-    .popup-note p {
-      color: #333;
-      font-size: 14px;
-      margin-bottom: 15px;
-    }
-    .button {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      width: 100%;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-    a {
-      color: white;
-      text-decoration: none;
-    }
-    #telegram-error-message {
-      margin-top: 10px;
-      color: #dc3545;
-    }
-    h1 {
-      font-size: 16px;
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="popup-note">
-      <a href="/manager/login/manager.html"><p>Connect to Manager</p></a>
-    </div>
-  </div>
-  <div class="container">
-    <div class="popup-note">
-      <p>Login Telegram</p>
-    </div>
-    <button class="button" onclick="startTelegramLogin()">Login</button>
-    <div id="telegram-error-message"></div>
-  </div>
-  <script>
-    async function startTelegramLogin() {
-      const authUrl = `http://127.0.0.1:8000/telegram/login`;
-      try {
-        const response = await fetch(authUrl, { method: 'GET' });
-        if (response.ok) {
-          const data = await response.json();
-          window.location.href = data.url;
-        } else {
-          document.getElementById('telegram-error-message').innerText = 'Telegram connection failed: ' + response.statusText;
-        }
-      } catch (error) {
-        document.getElementById('telegram-error-message').innerText = 'An error occurred: ' + error.message;
-      }
-    }
-  </script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -110,7 +15,7 @@
 <script>
   window.onload = function () {
     const urlParams = new URLSearchParams(window.location.search);
-    print(urlParams);
+    console.log(urlParams);
     const token = urlParams.get('token');
     localStorage.setItem('token', token);
     document.getElementById('telegramId').innerText = `token: ${token}`;
