Refactor index.html to update token retrieval in window.onload function

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     const urlParams = new URLSearchParams(window.location.search);
     console.log(urlParams);
     const token = urlParams.get('token');
+    console.log(token);
     localStorage.setItem('token', token);
     document.getElementById('telegramId').innerText = `token: ${token}`;
 
