Refactor index.html to update token retrieval in window.onload function and remove commented out code

--- a/public/index.html
+++ b/public/index.html
@@ -104,9 +104,9 @@
     window.onload = function () {
       console.log('Gelen URL:', window.location.href);
       const urlParams = new URLSearchParams(window.location.search);
-      const token = urlParams.get('token');
-
-      document.getElementById('telegramId').innerText = `Telegram ID: ${window.location.href}`;
+      console.log('URL Parametreleri:', urlParams);
+      // const token = urlParams.get('token');
+      // document.getElementById('telegramId').innerText = `Telegram ID: ${window.location.href}`;
     };
   </script>
 </head>
