Refactor app.js to update token retrieval in /start handler and remove unused code

--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doğrulama Sayfası</title>
+  <link rel="stylesheet" href="/user/anasayfa.css">
   <script>
     window.onload = function () {
       console.log('Gelen URL:', window.location.href);
@@ -112,9 +113,38 @@
 </head>
 
 <body>
-  <h1>Doğrulama Başarılı</h1>
-  <p id="telegramId"></p>
-  <p id="username"></p>
+  <div class="container">
+    <h1>Hoşgeldiniz, <span id="username">Kullanıcı Adı</span></h1>
+    <p>Burada, profil bilgilerinizi güncelleyebilir ve diğer işlemleri yapabilirsiniz.</p>
+
+
+    <div class="social-buttons">
+      <button id="twitter-button" class="twitter-button" onclick="startTwitterConnect()">Twitter Bağla</button>
+    </div>
+    <a href="/user/profile.html" class="button">Profilimi Güncelle</a>
+    <a href="/" class="button" id="logout-button">Çıkış Yap</a>
+    <div>
+      <button id="davet-button" class="button" onclick="createurl()">
+        <p>davet kodu oluştur</p>
+      </button>
+    </div>
+    <div class="invite-list">
+      <h2>Davetlerim</h2>
+      <div id="invites-container">
+        <!-- Davetler burada listelenecek -->
+      </div>
+    </div>
+    <div class="project-list">
+      <h2>proejeler</h2>
+      <div id="projects-container">
+        <!-- projeler burada listelenecek -->
+        <a href=""></a>
+      </div>
+    </div>
+    <div id="verification-container">
+    </div>
+  </div>
+  <script src="anasayfa.js"></script>
 </body>
 
 </html>
