--- a/public/index.html
+++ b/public/index.html
@@ -1,98 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Authentication</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      background-color: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      text-align: center;
-      margin: 10px;
-      width: 90%;
-      max-width: 300px;
-    }
-    .popup-note p {
-      color: #333;
-      font-size: 14px;
-      margin-bottom: 15px;
-    }
-    .button {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      width: 100%;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-    a {
-      color: white;
-      text-decoration: none;
-    }
-    #telegram-error-message {
-      margin-top: 10px;
-      color: #dc3545;
-    }
-    h1 {
-      font-size: 16px;
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="popup-note">
-      <a href="/manager/login/manager.html"><p>Connect to Manager</p></a>
-    </div>
-  </div>
-  <div class="container">
-    <div class="popup-note">
-      <p>Login Telegram</p>
-    </div>
-    <button class="button" onclick="startTelegramLogin()">Login</button>
-    <div id="telegram-error-message"></div>
-  </div>
-  <script>
-    async function startTelegramLogin() {
-      const authUrl = `http://127.0.0.1:8000/telegram/login`;
-      try {
-        const response = await fetch(authUrl, { method: 'GET' });
-        if (response.ok) {
-          const data = await response.json();
-          window.location.href = data.url;
-        } else {
-          document.getElementById('telegram-error-message').innerText = 'Telegram connection failed: ' + response.statusText;
-        }
-      } catch (error) {
-        document.getElementById('telegram-error-message').innerText = 'An error occurred: ' + error.message;
-      }
-    }
-  </script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -100,17 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doğrulama Sayfası</title>
-  <link rel="stylesheet" href="/user/anasayfa.css">
-  <script>
-    window.onload = function () {
-      console.log('Gelen URL:', window.location.href);
-      const urlParams = new URLSearchParams(window.location.search);
-      console.log('URL Parametreleri:', urlParams);
-      // const token = urlParams.get('token');
-      // document.getElementById('telegramId').innerText = `Telegram ID: ${window.location.href}`;
-    };
-  </script>
+  <link rel="stylesheet" href="/public/index.css">
 </head>
+
 
 <body>
   <div class="container">
@@ -121,8 +18,8 @@
     <div class="social-buttons">
       <button id="twitter-button" class="twitter-button" onclick="startTwitterConnect()">Twitter Bağla</button>
     </div>
-    <a href="/user/profile.html" class="button">Profilimi Güncelle</a>
-    <a href="/" class="button" id="logout-button">Çıkış Yap</a>
+    <!-- <a href="/user/profile.html" class="button">Profilimi Güncelle</a>
+    <a href="/" class="button" id="logout-button">Çıkış Yap</a> -->
     <div>
       <button id="davet-button" class="button" onclick="createurl()">
         <p>davet kodu oluştur</p>
@@ -140,8 +37,6 @@
         <!-- projeler burada listelenecek -->
         <a href=""></a>
       </div>
-    </div>
-    <div id="verification-container">
     </div>
   </div>
   <script src="anasayfa.js"></script>
