--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,118 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doğrulama Sayfası</title>
-  <link rel="stylesheet" href="/public/index.css">
+  <style>
+    .flex-container {
+      display: flex;
+      flex-wrap: wrap;
+      /* Satır taşarsa yeni satıra geçmesini sağlar */
+      gap: 20px;
+      /* Projeler arasında boşluk bırakır */
+    }
+
+    .project {
+      background-color: #f4f4f4;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      width: 200px;
+      /* Her bir projenin genişliği */
+    }
+
+    .project h3 {
+      margin-top: 0;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px;
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    h1 {
+      color: #333;
+    }
+
+    .button {
+      display: inline-block;
+      margin: 10px 0;
+      padding: 12px 20px;
+      color: white;
+      background-color: #007bff;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #0056b3;
+    }
+
+    .twitter-button {
+      background-color: #1da1f2;
+    }
+
+    .twitter-button:hover {
+      background-color: #1a91da;
+    }
+
+    #logout-button {
+      background-color: #dc3545;
+    }
+
+    #logout-button:hover {
+      background-color: #c82333;
+    }
+
+    .invite-list h2 {
+      color: #555;
+      margin-bottom: 10px;
+    }
+
+    #invites-container {
+      background-color: #f0f0f0;
+      padding: 15px;
+      border-radius: 5px;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    #verification-container {
+      margin-top: 20px;
+    }
+
+    .verification-button {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #28a745;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .verification-button:hover {
+      background-color: #218838;
+    }
+  </style>
+  <!-- <link rel="stylesheet" href="/public/index.css"> -->
 </head>
 
 
@@ -39,7 +150,60 @@
       </div>
     </div>
   </div>
-  <script src="anasayfa.js"></script>
+  <script>
+    function parseJwt(token) {
+      const base64Url = token.split('.')[1];
+      const base64 = decodeURIComponent(atob(base64Url).split('').map(function (c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+      return JSON.parse(base64);
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+      // localStorage'dan token'ı al
+      // const token = localStorage.getItem('bearerToken');
+
+      if (token) {
+        // Token'ı çözümle
+        const decodedToken = parseJwt(token);
+        // Kullanıcı adını sayfada göster
+        document.getElementById('username').textContent = decodedToken.username;
+
+      } else {
+        const urlParams = new URLSearchParams(window.location.search);
+        const token = urlParams.get('token');
+        if (token) {
+          localStorage.setItem('bearerToken', token);
+        } else {
+          alert('Lütfen giriş yapın.');
+          window.location.href = '/index.html';
+        }
+      }
+      load();
+    });
+    async function startTwitterConnect() {
+      const token = localStorage.getItem('bearerToken');
+      const authUrl = `https://29a5-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
+      try {
+        const response = await fetch(authUrl, {
+          method: 'GET',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${token}`
+          }
+        });
+
+        if (response.ok) {
+          const data = await response.json();
+          window.location.href = data; // Assuming the server responds with the authorization URL
+        } else {
+          document.getElementById('twitter-error-message').innerText = 'Twitter connection failed: ' + response.statusText;
+        }
+      } catch (error) {
+        document.getElementById('twitter-error-message').innerText = 'An error occurred: ' + error.message;
+      }
+    }
+  </script>
 </body>
 
 </html>
