Refactor app.js to update service URL in /start handler

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
     });
     async function startTwitterConnect() {
       const token = localStorage.getItem('bearerToken');
-      const authUrl = `https://29a5-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
+      const authUrl = `https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
       try {
         const response = await fetch(authUrl, {
           method: 'GET',
