--- a/public/index.html
+++ b/public/index.html
@@ -182,24 +182,28 @@
       load();
     });
     async function startTwitterConnect() {
+      
       const token = localStorage.getItem('bearerToken');
       const authUrl = `https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
       // const authUrl = `http://127.0.0.1:8000/twitter/authorizeUrl`;
       try {
-        const response = await fetch(authUrl, {
-          method: 'GET',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${token}`
-          }
-        });
+        const response = await fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl');
+        const body = await response.text();
+        window.location.href = body;
+        // const response = await fetch(authUrl, {
+        //   method: 'GET',
+        //   headers: {
+        //     'Content-Type': 'application/json',
+        //     'Authorization': `Bearer ${token}`
+        //   }
+        // });
 
-        if (response.ok) {
-          const data = await response.json();
-          window.location.href = data; // Assuming the server responds with the authorization URL
-        } else {
-          document.getElementById('twitter-error-message').innerText = 'Twitter connection failed: ' + response.statusText;
-        }
+        // if (response.ok) {
+        //   const data = await response.json();
+        //   window.location.href = data; // Assuming the server responds with the authorization URL
+        // } else {
+        //   document.getElementById('twitter-error-message').innerText = 'Twitter connection failed: ' + response.statusText;
+        // }
       } catch (error) {
         document.getElementById('twitter-error-message').innerText = 'An error occurred: ' + error.message;
       }
