--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,8 @@
         <a href=""></a>
       </div>
     </div>
+    <h1>Fetch API ile Veri Çekme</h1>
+    <div id="result"></div>
   </div>
   <script>
     function parseJwt(token) {
@@ -182,31 +184,43 @@
       load();
     });
     async function startTwitterConnect() {
-      
-      const token = localStorage.getItem('bearerToken');
-      const authUrl = `https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
-      // const authUrl = `http://127.0.0.1:8000/twitter/authorizeUrl`;
-      try {
-        const response = await fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl');
-        const body = await response.text();
-        window.location.href = body;
-        // const response = await fetch(authUrl, {
-        //   method: 'GET',
-        //   headers: {
-        //     'Content-Type': 'application/json',
-        //     'Authorization': `Bearer ${token}`
-        //   }
-        // });
+      fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl')
+        .then(response => response.json()) // JSON formatına çevir
+        .then(data => {
+          // Gelen veriyi HTML'de göster
+          document.getElementById('result').innerHTML = `
+                        <h3>Başlık: ${data.title}</h3>
+                        <p>${data.body}</p>
+                    `;
+        })
+        .catch(error => {
+          console.error('Hata oluştu:', error);
+          document.getElementById('result').innerHTML = 'Veri alınırken hata oluştu.';
+        });
+      // const token = localStorage.getItem('bearerToken');
+      // const authUrl = `https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
+      // // const authUrl = `http://127.0.0.1:8000/twitter/authorizeUrl`;
+      // try {
+      //   const response = await fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl');
+      //   const body = await response.text();
+      //   window.location.href = body;
+      // const response = await fetch(authUrl, {
+      //   method: 'GET',
+      //   headers: {
+      //     'Content-Type': 'application/json',
+      //     'Authorization': `Bearer ${token}`
+      //   }
+      // });
 
-        // if (response.ok) {
-        //   const data = await response.json();
-        //   window.location.href = data; // Assuming the server responds with the authorization URL
-        // } else {
-        //   document.getElementById('twitter-error-message').innerText = 'Twitter connection failed: ' + response.statusText;
-        // }
-      } catch (error) {
-        document.getElementById('twitter-error-message').innerText = 'An error occurred: ' + error.message;
-      }
+      // if (response.ok) {
+      //   const data = await response.json();
+      //   window.location.href = data; // Assuming the server responds with the authorization URL
+      // } else {
+      //   document.getElementById('twitter-error-message').innerText = 'Twitter connection failed: ' + response.statusText;
+      // }
+      // } catch (error) {
+      //   document.getElementById('twitter-error-message').innerText = 'An error occurred: ' + error.message;
+      // }
     }
   </script>
 </body>
