--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
         })
         .catch(error => {
           console.error('Hata oluştu:', error);
-          document.getElementById('result').innerHTML = 'Veri alınırken hata oluştu.';
+          document.getElementById('result').innerHTML = error;
         });
       // const token = localStorage.getItem('bearerToken');
       // const authUrl = `https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
