--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
 
     document.addEventListener('DOMContentLoaded', function () {
       // localStorage'dan token'ı al
-      // const token = localStorage.getItem('bearerToken');
+      const token = localStorage.getItem('bearerToken');
 
       if (token) {
         // Token'ı çözümle
@@ -197,30 +197,6 @@
           console.error('Hata oluştu:', error);
           document.getElementById('result').innerHTML = error;
         });
-      // const token = localStorage.getItem('bearerToken');
-      // const authUrl = `https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl`;
-      // // const authUrl = `http://127.0.0.1:8000/twitter/authorizeUrl`;
-      // try {
-      //   const response = await fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl');
-      //   const body = await response.text();
-      //   window.location.href = body;
-      // const response = await fetch(authUrl, {
-      //   method: 'GET',
-      //   headers: {
-      //     'Content-Type': 'application/json',
-      //     'Authorization': `Bearer ${token}`
-      //   }
-      // });
-
-      // if (response.ok) {
-      //   const data = await response.json();
-      //   window.location.href = data; // Assuming the server responds with the authorization URL
-      // } else {
-      //   document.getElementById('twitter-error-message').innerText = 'Twitter connection failed: ' + response.statusText;
-      // }
-      // } catch (error) {
-      //   document.getElementById('twitter-error-message').innerText = 'An error occurred: ' + error.message;
-      // }
     }
   </script>
 </body>
