--- a/public/index.html
+++ b/public/index.html
@@ -163,13 +163,21 @@
 
     document.addEventListener('DOMContentLoaded', function () {
       // localStorage'dan token'ı al
-      const token = localStorage.getItem('bearerToken');
+      const token = getCookie('bearerToken');
+
+      function getCookie(name) {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) return parts.pop().split(';').shift();
+      }
+      // const token = localStorage.getItem('bearerToken');
 
       if (token) {
         // Token'ı çözümle
         const decodedToken = parseJwt(token);
+        alert(decodedToken);
         // Kullanıcı adını sayfada göster
-        document.getElementById('username').textContent = decodedToken.username;
+        // document.getElementById('username').textContent = decodedToken.username;
 
       } else {
         const urlParams = new URLSearchParams(window.location.search);
