--- a/public/index.html
+++ b/public/index.html
@@ -163,14 +163,16 @@
 
     document.addEventListener('DOMContentLoaded', function () {
       // localStorage'dan token'ı al
-      const token = getCookie('bearerToken');
+      
 
       function getCookie(name) {
         const value = `; ${document.cookie}`;
         const parts = value.split(`; ${name}=`);
         if (parts.length === 2) return parts.pop().split(';').shift();
       }
+      const token = getCookie('bearerToken');
       // const token = localStorage.getItem('bearerToken');
+      console.log(token);
 
       if (token) {
         // Token'ı çözümle
@@ -186,7 +188,7 @@
           localStorage.setItem('bearerToken', token);
         } else {
           alert('Lütfen giriş yapın.');
-          window.location.href = '/index.html';
+          // window.location.href = '/index.html';
         }
       }
       load();
