--- a/public/index.html
+++ b/public/index.html
@@ -164,15 +164,8 @@
     document.addEventListener('DOMContentLoaded', function () {
       // localStorage'dan token'ı al
       
+      const token = localStorage.getItem('bearerToken');
 
-      function getCookie(name) {
-        const value = `; ${document.cookie}`;
-        const parts = value.split(`; ${name}=`);
-        if (parts.length === 2) return parts.pop().split(';').shift();
-      }
-      const token = getCookie('bearerToken');
-      // const token = localStorage.getItem('bearerToken');
-      console.log(token);
 
       if (token) {
         // Token'ı çözümle
