--- a/public/index.html
+++ b/public/index.html
@@ -197,19 +197,25 @@
     //   }
     // });
     async function startTwitterConnect() {
-      fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl')
-        .then(response => response.json()) // JSON formatına çevir
-        .then(data => {
-          // Gelen veriyi HTML'de göster
-          document.getElementById('result').innerHTML = `
-                        <h3>Başlık: ${data.title}</h3>
-                        <p>${data.body}</p>
-                    `;
-        })
-        .catch(error => {
-          console.error('Hata oluştu:', error);
-          document.getElementById('result').innerHTML = error;
-        });
+      const response = await fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl');
+      if (!response.ok) {
+        const errorText = await response.text(); // Hata mesajını al
+        throw new Error(`API isteği başarısız: ${response.status} - ${errorText}`);
+      }
+      const data = await response.json(); // JSON formatına çevir
+
+      // Gelen veriyi HTML'de göster
+      document.getElementById('result').innerHTML = JSON.stringify(data, null, 2);
+      // fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl')
+      //   .then(response => response.json()) // JSON formatına çevir
+      //   .then(data => {
+      //     // Gelen veriyi HTML'de göster
+
+      //   })
+      //   .catch(error => {
+      //     console.error('Hata oluştu:', error);
+      //     document.getElementById('result').innerHTML = error;
+      //   });
     }
   </script>
 </body>
