--- a/public/index.html
+++ b/public/index.html
@@ -200,10 +200,13 @@
       const response = await fetch('https://802f-78-177-177-231.ngrok-free.app/twitter/authorizeUrl');
       document.getElementById('result').innerHTML = "geldi";
       if (!response.ok) {
+        document.getElementById('result').innerHTML = "1";
         const errorText = await response.text(); // Hata mesajını al
         throw new Error(`API isteği başarısız: ${response.status} - ${errorText}`);
       }
+      document.getElementById('result').innerHTML = "2";
       const data = await response.json(); // JSON formatına çevir
+      document.getElementById('result').innerHTML = "3";
 
       // Gelen veriyi HTML'de göster
       document.getElementById('result').innerHTML = JSON.stringify(data, null, 2);
