--- a/public/index.html
+++ b/public/index.html
@@ -132,79 +132,15 @@
 
   </div>
   <script>
-    // function parseJwt(token) {
-    //   console.log(token);
-    //   if (!token) {
-    //     throw new Error("Geçersiz token: Token boş veya null.");
-    //   }
-    //   // Token'ı '.' ile ayır ve ikinci parçayı (Payload) al
-    //   const base64Url = token.split('.')[1];
-
-    //   // Base64 formatına uygun hale getir
-    //   const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-
-    //   // Base64'ten çözümlenmiş JSON verisini al
-    //   const jsonPayload = decodeURIComponent(atob(base64).split('').map(c => {
-    //     return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-    //   }).join(''));
-
-    //   // JSON formatında döndür
-    //   return JSON.parse(jsonPayload);
-    // }
-    // document.addEventListener('DOMContentLoaded', function () {
-    //   // localStorage'dan token'ı al
-
-    //   const token = localStorage.getItem('bearerToken');
-
-
-    //   const decodedToken = parseJwt(token);
-    //   if (token) {
-    //     // Token'ı çözümle
-    //     alert(decodedToken);
-    //     // Kullanıcı adını sayfada göster
-    //     // document.getElementById('username').textContent = decodedToken.username;
-
-    //   } else {
-    //     const urlParams = new URLSearchParams(window.location.search);
-    //     const token = urlParams.get('token');
-    //     if (token) {
-    //       localStorage.setItem('bearerToken', token);
-    //     } else {
-    //       alert('Lütfen giriş yapın.');
-    //       // window.location.href = '/index.html';
-    //     }
-    //   }
-    // });
     async function startTwitterConnect() {
-  const authUrl = `/twitter/authorizeUrl`;
-  try {
-    const response = await fetch(authUrl, {
-      method: 'GET',
-      headers: {
-        'Content-Type': 'application/json'
-      }
-    });
-
-    if (!response.ok) {
-      const errorText = await response.text(); // Hata metnini al
-      throw new Error(`API isteği başarısız: ${response.status} - ${errorText}`);
+      const authUrl = `http://127.0.0.1:8000/twitter/authorizeUrl`;
+      
+      fetch(authUrl)
+        .then(response => response.json())
+        .then(data => {
+          window.location.href = data[0];
+        })
     }
-
-    const data = await response.json();
-
-    // Yanıt türünü kontrol et
-    if (typeof data === 'string') {
-      alert(data);
-      // localStorage.setItem('bearerToken', data);
-      // window.location = '../home/managerHome.html';
-    } else {
-      document.getElementById('login-error-message').innerText = 'Login failed: ' + (data.error || 'Unknown error');
-    }
-  } catch (error) {
-    console.error('Hata oluştu:', error);
-    document.getElementById('login-error-message').innerText = 'Bir hata oluştu: ' + error.message;
-  }
-}
 
   </script>
 </body>
