--- a/public/index.html
+++ b/public/index.html
@@ -133,9 +133,15 @@
   </div>
   <script>
     async function startTwitterConnect() {
+      const token = localStorage.getItem('bearerToken');
       const authUrl = `http://127.0.0.1:8000/twitter/authorizeUrl`;
       
-      fetch(authUrl)
+      fetch(authUrl,{
+        method: 'GET',
+        headers: {
+          'Authorization': `Bearer ${token}`
+        }
+      })
         .then(response => response.json())
         .then(data => {
           window.location.href = data[0];
