Refactor app.js to update token display logic

--- a/public/homePage.html
+++ b/public/homePage.html
@@ -121,7 +121,7 @@
 
 
 <body>
-  <h1>URL Parametrelerini Alma</h1>
+  <h1>URL Parametrelerini Almasasa</h1>
   <p>Token: <span id="token"></span></p>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
