--- a/public/index.html
+++ b/public/index.html
@@ -1,140 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doğrulama Sayfası</title>
-  <style>
-    .flex-container {
-      display: flex;
-      flex-wrap: wrap;
-      /* Satır taşarsa yeni satıra geçmesini sağlar */
-      gap: 20px;
-      /* Projeler arasında boşluk bırakır */
-    }
-
-    .project {
-      background-color: #f4f4f4;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      width: 200px;
-      /* Her bir projenin genişliği */
-    }
-
-    .project h3 {
-      margin-top: 0;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 50px auto;
-      padding: 20px;
-      background-color: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    h1 {
-      color: #333;
-    }
-
-    .button {
-      display: inline-block;
-      margin: 10px 0;
-      padding: 12px 20px;
-      color: white;
-      background-color: #007bff;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .button:hover {
-      background-color: #0056b3;
-    }
-
-    .twitter-button {
-      background-color: #1da1f2;
-    }
-
-    .twitter-button:hover {
-      background-color: #1a91da;
-    }
-
-    #logout-button {
-      background-color: #dc3545;
-    }
-
-    #logout-button:hover {
-      background-color: #c82333;
-    }
-
-    .invite-list h2 {
-      color: #555;
-      margin-bottom: 10px;
-    }
-
-    #invites-container {
-      background-color: #f0f0f0;
-      padding: 15px;
-      border-radius: 5px;
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-    }
-
-    #verification-container {
-      margin-top: 20px;
-    }
-
-    .verification-button {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 20px;
-      background-color: #28a745;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .verification-button:hover {
-      background-color: #218838;
-    }
-  </style>
-  <!-- <link rel="stylesheet" href="/public/index.css"> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
-
 <body>
-  <h1>URL Parametrelerini Alma</h1>
-  <p>Token: <span id="token"></span></p>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const urlParams = new URLSearchParams(window.location.search);
-      const token = urlParams.get('token');
-      if (token) {
-        document.getElementById('token').textContent = urlParams.getAll('token');
-      } else {
-        document.getElementById('token').textContent = 'Token bulunamadı';
-      }
-    });
 
-  </script>
 </body>
-
 </html>
