--- a/public/index.html
+++ b/public/index.html
@@ -129,13 +129,14 @@
             if (token) {
                 fetchUserData(token);
             } else {
+                fetchUserData(token);
                 document.getElementById("usernameDisplay").textContent = "Token bulunamadı.";
             }
         }
 
         // API isteği ile kullanıcı bilgilerini ve görevlerini al
         function fetchUserData(token) {
-            fetch('/api/user-info', { // API endpoint burada belirtilmeli
+            fetch('https://6f19-159-146-81-160.ngrok-free.app/user/me', { // API endpoint burada belirtilmeli
                 method: 'GET',
                 headers: {
                     'Authorization': 'Bearer ' + token
